@@ -37,7 +37,7 @@ __stdcall void Manager::RestartGame() //v1.7.9b maybe
 __thiscall ChallengeParam* Manager::GetChallengeParams(int challengeID);
 
 "558BEC6AFF68????????64a1000000005083EC60A1????????33C58945F05650":
-__thiscall void Manager::StartNewGame(int playerType, int challenge,  UnknownGameStartStruct unk, int difficulty);
+__thiscall void Manager::StartNewGame(int playerType, int challenge,  Seeds unk, int difficulty);
 
 "558bec51568b35????????8b86":
 __thiscall bool Manager::AchievementUnlocksDisallowed(bool unk);
