@@ -1,9 +1,13 @@
+"558bec51568d45??8bf1":
+static int Seeds::String2Seed(std_string *str);
+
 // sorry for the mess, this is a direct ghidra export :(
-struct Seeds {
+struct Seeds depends (RNG,ANM2){
     bool _isCustomRun : 0x0;
     unsigned int _gameStartSeed : 0x4;
-    unsigned int _unkSeed : 0x8;
+    RNG _rng : 0x8;
     int _stageSeeds[14] : 0x18;
     unsigned int _playerInitSeed : 0x50;
+	unsigned int _unkseed : 0x54;
     int _seedEffectsCount : 0x58;
 } : 0x5c;
