@@ -77,6 +77,7 @@ Modified:
 /newline/
 Fixes:
 * Fixed relative ids being displayed as actual ids on xmldata tables.
+* Fixed SetCompletionMarks functions when launching the game from the room editor or BR.
 * Fix GridEntity:ToFire/ToTNT/ToWall functions
 * Fixed binder for Entity:ComputeStatusEffectDuration
 * Fixed pause menu modded marks rendering over the controller disconected popup
@@ -85,7 +86,7 @@ Fixes:
 * Fixed an issue with the stats sprite for the pause menu callbacks where it ended up holding garbage data
 * Fixed some broken EventCounter enums
 * Fixed PRE/POST_ENTITY_THROW EntityPlayer argument being pushed as optional parameter
-* Fixed crash when calling Game():MoveToRandomRoom() with seed 0	
+* Fixed crash when calling Game():MoveToRandomRoom() with seed 0
 /newline/
 /newline/
 v1.0.5a -
